edit index.html files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
             <header class="header-section">
-                <nav class="logo">My Logo</nav>
+                <nav class="logo"><a href="#">My Logo</a></nav>
                 <nav><img src="/images/Enabled.png" alt="enable image"></nav>
             </header>
             <div class="contents">
