--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <div class="wrapper">
             <header class="header-section">
-                <nav class="logo"><a href="#">My Logo</a></nav>
-                <nav><img src="/images/Enabled.png" alt="enable image"></nav>
+                <nav class="logo"><div>
+                    <a href="#">My Logo</a>
+                </div></nav>
+                <nav><div>
+                    <a href="#"><img src="/images/Enabled.png" alt="enable image"></a>
+                </div></nav>
             </header>
             <div class="contents">
                 <section class="main-section">
