--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="wrapper">
-            <header class="header-section">
-                <nav class="logo"><div>
-                    <a href="#">My Logo</a>
-                </div></nav>
-                <nav><div>
-                    <a href="#"><img src="/images/Enabled.png" alt="enable image"></a>
-                </div></nav>
+            <header>
+                <nav class="nav-bar">
+                    <a href="#">
+                        <div class="logo">My Logo</div>
+                        <img src="/images/Enabled.png" alt="enable-image">
+                      </a>
+                </nav>
             </header>
             <div class="contents">
                 <section class="main-section">
@@ -40,7 +40,7 @@
                             </li>
                         </ul>
                 </section>
-            </div>
+            </div> 
     </div> 
 </body>
 </html>
