--- a/index.html
+++ b/index.html
@@ -41,6 +41,91 @@
                         </ul>
                 </section>
             </div> 
+            <section class="projects">
+                <div class="work">
+                    <div class="work-image">
+                        <img src="/images/snap1.png" alt="work-image">
+                    </div>
+                    <h2 class="header">Tonic</h2>
+                    <div class="work-flow">
+                        <div class="canopy">CANOPY</div>
+                        <div class="dot"></div>
+                        <div class="back-end">Back End Dev</div>
+                        <div class="dot"></div>
+                        <div class="year">2015</div>
+                    </div>
+                    <p class="paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="skills">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>javascript</li>
+                    </ul>
+                    <button class="project-button">See Project</button>
+                </div>
+            
+            <div class="work">
+                <div class="work-image">
+                    <img src="/images/snap2.png" alt="work-image">
+                </div>
+                <h2 class="header">Multi-Post
+                    Stories</h2>
+                <div class="work-flow">
+                    <div class="canopy">CANOPY</div>
+                    <div class="dot"></div>
+                    <div class="back-end">Back End Dev</div>
+                    <div class="dot"></div>
+                    <div class="year">2015</div>
+                </div>
+                <p class="paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="skills">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                </ul>
+                <button class="project-button">See Project</button>
+            </div>
+            <div class="work">
+                <div class="work-image">
+                    <img src="/images/snap3.png" alt="work-image">
+                </div>
+                <h2 class="header">Tonic</h2>
+                <div class="work-flow">
+                    <div class="canopy">CANOPY</div>
+                    <div class="dot"></div>
+                    <div class="back-end">Back End Dev</div>
+                    <div class="dot"></div>
+                    <div class="year">2015</div>
+                </div>
+                <p class="paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="skills">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                </ul>
+                <button class="project-button">See Project</button>
+            </div>
+            <div class="work">
+                <div class="work-image">
+                    <img src="/images/snap4.png" alt="work-image">
+                </div>
+                <h2 class="header">Multi-Post
+                    Stories</h2>
+                <div class="work-flow">
+                    <div class="canopy">CANOPY</div>
+                    <div class="dot"></div>
+                    <div class="back-end">Back End Dev</div>
+                    <div class="dot"></div>
+                    <div class="year">2015</div>
+                </div>
+                <p class="paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.<p>
+                <ul class="skills">
+                    <li class="html">html</li>
+                    <li class="css">css</li>
+                    <li class="javascript">javascript</li>
+                </ul>
+                <button class="project-button">See Project</button>
+            </div>
+        </section>
     </div> 
 </body>
 </html>
