--- a/index.html
+++ b/index.html
@@ -175,7 +175,19 @@
                         <li><img src="images/down.png" alt="down"></li>
                     </ul>
                     <div class="line"></div>
-        </section>   
+        </section>
+        <section class="form-section">
+            <h4>contact me</h4>
+            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+            <form action="#" method="post">
+                <ul class="contact-form">
+                    <li><input type="text"></li>
+                    <li><input type="email"></li>
+                    <li><textarea name="user-text" id="text" cols="30" rows="10">write your message here </textarea></li>
+                    <li> <button type="submit">Get In Touch</button></li>
+                </ul>
+            </form>
+        </section>
     </div> 
 </body>
 </html>
