--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <section class="form-section">
             <h4>contact me</h4>
             <p>If you have an application you <br>are interested in developing, a feature that you need built or a project that needs coding. I’d <br>love to help with it </p>
-            <form class="form-container" action="/my-handling-form-page" method="post">
+            <form class="form-container" action="https://formspree.io/f/mpzbbnjj" method="post">
                 <ul>
                  <li>
                    <label for="name">name</label>
