upadte form-section

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <ul>
                  <li>
                    <label for="name">name</label>
-                   <input type="text" placeholder="derrick"  max="30" required id="name" name="user_name">
+                   <input type="text" placeholder="derrick"  maxlength="30" required id="name" name="user_name">
                  </li>
                  <li>
                    <label for="mail">E-mail:</label>
