--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div>
                 <h2 class="about-header">About
                     Myself</h2>
-                    <p class="about-paragraph">Hello I’m a software developer! I can help <br>you build a product , feature or website<br> Look through some of my work and experience! If you like what you see and <br> have a project you need coded, don’t <br>hestiate to contact me.</p>
+                    <p class="about-paragraph">Hello I’m a software developer! I can help you build a <br> product , feature or website Look through some of my <br>work and experience! If you like what you see and  have <br>a project you need coded, don’t hestiate to contact me.</p>
                     <h3 class="about-intro">LET'S CONNECT</h3>
                         <ul class="nav-links2">
                             <li>
@@ -203,7 +203,7 @@
         </section>
         <section class="form-section">
             <h4>contact me</h4>
-            <p>If you have an application you <br>are interested in developing, a feature that you need built or a project that needs coding. I’d <br>love to help with it </p>
+            <p>If you have an application you are interested in <br>developing, a feature that you need built or a project <br>that needs coding. I’d love to help with it </p>
             <form class="form-container" action="https://formspree.io/f/mpzbbnjj" method="post">
                 <ul>
                  <li>
@@ -216,7 +216,7 @@
                  </li>
                  <li>
                    <label for="msg">Message:</label>
-                   <textarea maxlength="500" id="msg"name="user_message">Write your message here</textarea>
+                   <textarea maxlength="500" placeholder="Write your message here" id="msg"name="user_message"></textarea>
                  </li>
                  <li class="button">
                     <button type="submit">Get In Touch</button>
