update desktop page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="work-image lost">
                     <img src="images/snap2.png" alt="work-image">
                 </div>
-                <img class="desktop"  src="images/Snapshoot Portfolio2.png" alt="images">
+                <img class="desktop"  src="images/Portfolio2.png" alt="images">
                 <div class="labels-2">
                     <h2 class="header">Multi-Post
                         Stories</h2>
