--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="wrapper">
             <header>
                 <nav class="nav-bar">
                     <a href="#">
                         <div class="logo">My Logo</div>
-                        <img src="images/Enabled.png" alt="enable-image">
-                      </a>
-                      <ul class="desktop-nav">
+                      </a> 
+                     
+                    <div>
+                        <img class="loose" src="images/Enabled.png" alt="enable-image">
+                    </div>
+                        <ul class="pop-up">
+                            <li><a href="#portfolio"class="nav-links" >Portfolio</a></li>
+                            <li><a href="#about"class="nav-links" >About</a></li>
+                            <li><a href="#contact" class="nav-links" >Contact</a></li>
+                          </ul>
+                          <img  class="close-icon" src="/images/cancel.png" alt="cancel-icon">
+                   
+                    <ul class="desktop-nav">
                         <li><a href="#">portfolio</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </header>
-                <section class="main-section">
+                <section id="about" class="main-section">
                     <h1 class="heading">I’m Derrick<br>
                         Glad to see you!</h1>
                         <p class="intro-1">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
@@ -44,7 +53,7 @@
                             </li>
                         </ul>
                 </section>
-            <section class="projects">
+            <section id="portfolio" class="projects">
                 <div class="work">
                     <div class="work-image lost">
                         <img src="images/snap1.png" alt="work-image"> 
@@ -167,7 +176,7 @@
                 <img class="desktop-image"  src="images/Portfolio4.png" alt="project">
             </div>
         </section>
-        <section class="about-me">
+        <section id="contact" class="about-me">
             <div>
                 <h2 class="about-header">About
                     Myself</h2>
@@ -249,6 +258,6 @@
                </form>
                <img class="form-image" src="images/bg-image.png" alt="back-ground">
         </section>
-    </div> 
+        <script src="/script.js" ></script>
 </body>
 </html>
