Edit index files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#about"class="nav-links" >About</a></li>
                         <li><a href="#contact" class="nav-links" >Contact</a></li>
                       </ul>
-                      <img  class="close-icon" src="/images/cancel.png" alt="cancel-icon">
+                      <img  class="close-icon" src="images/cancel.png" alt="cancel-icon">
                
                 <ul class="desktop-nav">
                     <li><a href="#">portfolio</a></li>
@@ -261,6 +261,6 @@
     </section>
     </div>
             
-        <script src="/script.js" ></script>
+        <script src="script.js" ></script>
 </body>
 </html>
